<resources>
    <string name="app_name">Driver\'s application</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="registerHere">No Account yet? Create one</string>
    <string name="toastMessage">toast</string>
    <string name="logo">logo</string>
    <string name="requiredError">Required!</string>
    <string name="emailError">Invalid Email!</string>
    <string name="usernameError">Invalid Username! TODO pattern!</string>
    <string name="repeatPasswordError">Password doesn\'t match!</string>
    <string name="passwordError">Invalid Password! TODO pattern!</string>

    <!-- TODO check if needed the below str -->
    <string name="add">add</string>
    <string name="reset">reset</string>
    <string name="about">about</string>
    <string name="exit">exit</string>
    <string name="action_search">search</string>
    <string name="action_notifications">notifications</string>
    <string name="loginTittle">Login</string>
    <string name="registerTitle">Register</string>
    <string name="userAreaTitle">Home</string>
</resources>
