<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".BaseActivity">
    <!-- Search / will display always -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          app:showAsAction="ifRoom"/>

    <!-- Notifications -->
    <item android:id="@+id/action_notifications"
          android:icon="@drawable/ic_action_notifications"
          android:title="@string/action_notifications"
          app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/about"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        app:showAsAction="never">
    </item>
</menu>